# tokenjam-bench

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  README_TROUBLESHOOTING.md  agent_pipeline.py  ci_benchmark.py  cli.py  cost.py  dashboard.py  deepeval_judge.py  history.py  judge.py  mock-directive-format.md  pipeline.py  pyproject.toml  report.py  report_html.py  run.py  version.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  publish-pypi.yml
agents/: __init__.py  runner.py  swe_bench_tools.py  trace.py  validation.py
benchmarks/: __init__.py  agent_base.py  base.py  gsm8k.py  humaneval.py  judged.py  real_scenarios.py  sample_agent.py  samples.py  scoring.py
datasets/research/: tasks.json
demo/: seed_demo.py
docs/: README.md  analytics.md  api-reference.md  architecture.md  benchmarks.md  cli-reference.md  history.md  models.md  quickstart.md  scenarios.md  statistics.md  swe-bench-lite.md  tests.md  workflows.md
docs/evidence/: 2026-06-26-real-workflow-dashboard.md  README.md  humaneval_deepseek_reasoner_to_chat.html  humaneval_deepseek_reasoner_to_chat.json  judged_deepseek_correctness.html  judged_deepseek_correctness.json
docs/evidence/archive/: README.md  tjbench_gsm8k_tj0.5.1_1782443915.html  tjbench_gsm8k_tj0.5.1_1782443915.json  tjbench_humaneval_tj0.5.1_1782443963.html  tjbench_humaneval_tj0.5.1_1782443963.json  tjbench_judged_tj0.5.1_1782444012.html  tjbench_judged_tj0.5.1_1782444012.json
docs/evidence/archive/2026-06-26-real-dashboard/: tjbench_customer-support_tj0.5.1_1782480389.html  tjbench_customer-support_tj0.5.1_1782480389.json  tjbench_email-assistant_tj0.5.1_1782480651.html  tjbench_enterprise-rag_tj0.5.1_1782480507.html  tjbench_enterprise-rag_tj0.5.1_1782480507.json  tjbench_gsm8k_tj0.5.1_1782480094.html  tjbench_gsm8k_tj0.5.1_1782480094.json  tjbench_humaneval_tj0.5.1_1782480162.html  tjbench_judged_tj0.5.1_1782480215.html  tjbench_research-assistant_tj0.5.1_1782480799.html
docs/evidence/live/2026-06-26-multipair/: README.md  tjbench_customer-support_tj0.5.2_1782506002.html  tjbench_customer-support_tj0.5.2_1782506002.json  tjbench_customer-support_tj0.5.2_1782506688.html  tjbench_customer-support_tj0.5.2_1782506688.json  tjbench_email-assistant_tj0.5.2_1782506301.html  (+31 more)
models/: __init__.py  anthropic_agent_client.py  anthropic_client.py  google_client.py  mock_agent_client.py  mock_client.py  openai_client.py  openai_compatible.py  registry.py
scripts/: run_multipair_evidence.sh  run_real_benchmarks.sh
tests/: test_agent_pipeline_offline.py  test_agent_runner.py  test_agent_validation.py  test_ci_benchmark.py  test_dashboard.py  test_deepseek.py  test_history.py  test_honesty_guard.py  test_judge.py  test_matrix.py  test_pipeline_offline.py  test_real_scenarios.py  test_replay.py  test_report.py  test_report_html.py  test_scenario_suites.py  test_scoring.py  test_stats.py  test_swe_bench_lite.py  test_version_stamp.py
tjbench/: __init__.py  agent_pipeline.py  bench_meta.py  ci_benchmark.py  cli.py  cost.py  dashboard.py  deepeval_judge.py  exec_sandbox.py  judge.py  matrix.py  pipeline.py  recommend.py  replay.py  replay_pipeline.py  stats.py
tjbench/agents/: __init__.py  runner.py  swe_bench_tools.py  tools.py  trace.py  validation.py
tjbench/benchmarks/: __init__.py  agent_base.py  gsm8k.py  humaneval.py  judged.py  real_scenarios.py  sample_agent.py  samples.py  scenario_lib.py  scenario_suites.py  scoring.py  swe_bench_lite.py
tjbench/models/: __init__.py  anthropic_agent_client.py  anthropic_client.py  base.py  google_client.py  mock_agent_client.py  mock_client.py  openai_client.py  openai_compatible.py  registry.py  tool_calling.py
(+11 files in other folders)
