[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenjam-bench"
version = "0.1.0"
description = "Benchmarking + evaluation harness that proves TokenJam's savings with executable-accuracy ground truth"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# TokenJam is consumed as a normal published package, NOT vendored or pinned to
# a repo checkout. `pip install -U tokenjam` pulls the latest; the bench stamps
# whatever version resolved onto every result (see version.py).
# Deliberately an open lower-bound constraint so daily TokenJam releases flow in
# with a plain upgrade — `make update-tokenjam`.
dependencies = [
    "tokenjam>=0.5",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
# Live model providers. Kept optional so the offline mock pipeline (and tests)
# run with zero provider SDKs installed. Install what you'll actually call.
providers = [
    "anthropic>=0.40",
    "openai>=1.40",
    "google-genai>=0.3",
]
# Real benchmark datasets (HumanEval / GSM8K loaders). The built-in `samples`
# benchmark needs none of this and runs offline.
datasets = [
    "datasets>=2.0",
    "human-eval>=1.0",
]
# DeepEval-backed judge for the `judged` benchmark (correctness / faithfulness /
# answer-relevancy / task-completion). The judge model needs its own API key.
# The offline MockJudge needs none of this.
judge = ["deepeval>=1.0"]
dev = ["pytest", "ruff"]

[project.scripts]
# Namespaced entry point — no collision with same-named PyPI packages.
tjbench = "tjbench.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["tjbench"]

# Put the repo root on sys.path so `import tjbench` resolves from a checkout
# (tests + run.py run from source, pytest >= 7).
[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
